force-app/main/default/objects/inspire1__Attribute_Assignment__c/inspire1__Attribute_Assignment__c.object-meta.xml
<CustomObject>
    <description>Inspire Planner - Captures assignment of attributes to Users or Contacts.</description>
    <label>Attribute Assignment</label>
    <nameField>
        <displayFormat>RAA-{000000}</displayFormat>
        <label>Assignment No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attribute Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>