force-app/main/default/objects/inspire1__Attribute_Assignment__c/fields/AuditorDayRate__c.field-meta.xml
<CustomField>
    <fullName>AuditorDayRate__c</fullName>
    <label>Auditor Day Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>