force-app/main/default/objects/inspire1__Attribute_Assignment__c/fields/AuditorName__c.field-meta.xml
<CustomField>
    <fullName>AuditorName__c</fullName>
    <formula>If(inspire1__Contact__c!=null, inspire1__Contact__r.FirstName + &apos; &apos; + inspire1__Contact__r.LastName,  inspire1__User__r.FirstName + &apos; &apos; + inspire1__User__r.LastName)</formula>
    <label>Auditor Name</label>
    <type>Text</type>
</CustomField>