force-app/main/default/objects/inspire1__Attribute_Assignment__c/fields/AuditorTravelExpenses__c.field-meta.xml
<CustomField>
    <fullName>AuditorTravelExpenses__c</fullName>
    <label>Auditor Travel Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>