force-app/main/default/objects/inspire1__Attribute_Assignment__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASI Witness</fullName>
            </value>
            <value>
                <fullName>Auditor</fullName>
            </value>
            <value>
                <fullName>Auditor Lead</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>Peer Reviewer</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
            <value>
                <fullName>Sampler</fullName>
            </value>
            <value>
                <fullName>Senior Lead</fullName>
            </value>
            <value>
                <fullName>Senior Witness</fullName>
            </value>
            <value>
                <fullName>Senior Witness Auditor</fullName>
            </value>
            <value>
                <fullName>SLCWA</fullName>
            </value>
            <value>
                <fullName>Social Auditor</fullName>
            </value>
            <value>
                <fullName>Team Auditor</fullName>
            </value>
            <value>
                <fullName>Technical Auditor</fullName>
            </value>
            <value>
                <fullName>Technical Expert</fullName>
            </value>
            <value>
                <fullName>Technical Reviewer</fullName>
            </value>
            <value>
                <fullName>Trainee</fullName>
            </value>
            <value>
                <fullName>Trainer</fullName>
            </value>
            <value>
                <fullName>Translator</fullName>
            </value>
            <value>
                <fullName>Witness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>