force-app/main/default/objects/inspire1__Attribute_Assignment__c/fields/DailyMealsRate__c.field-meta.xml
<CustomField>
    <fullName>DailyMealsRate__c</fullName>
    <label>Daily Meals Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>