force-app/main/default/objects/inspire1__Attribute_Assignment__c/fields/DMS_program__c.field-meta.xml
<CustomField>
    <fullName>DMS_program__c</fullName>
    <label>DMS program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>