force-app/main/default/objects/inspire1__Attribute_Assignment__c/fields/DMS_qp_id__c.field-meta.xml
<CustomField>
    <fullName>DMS_qp_id__c</fullName>
    <label>DMS qp id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>