force-app/main/default/objects/inspire1__Attribute_Assignment__c/fields/inspire1__Contact__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact the attribute is assigned to.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Attribute Assignments</relationshipLabel>
    <relationshipName>Attribute_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>