force-app/main/default/objects/inspire1__Attribute_Assignment__c/fields/inspire1__Notes__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Notes__c</fullName>
    <description>Notes related to attribute assignment.</description>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>