force-app/main/default/objects/inspire1__Attribute_Assignment__c/fields/inspire1__Rating__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Rating__c</fullName>
    <description>Rates the level of attribute for User or Contact.</description>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>