force-app/main/default/objects/inspire1__Attribute_Assignment__c/fields/inspire1__Resource_Attribute__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Resource_Attribute__c</fullName>
    <description>Resource attribute related to assignment.</description>
    <label>Resource Attribute</label>
    <referenceTo>inspire1__Resource_Attribute__c</referenceTo>
    <relationshipLabel>Attribute Assignments</relationshipLabel>
    <relationshipName>Attribute_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>