force-app/main/default/objects/inspire1__Attribute_Assignment__c/fields/inspire1__User__c.field-meta.xml
<CustomField>
    <fullName>inspire1__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User assigned to attribute.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Attribute_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>