force-app/main/default/objects/inspire1__Attribute_Assignment__c/fields/NeverExpires__c.field-meta.xml
<CustomField>
    <fullName>NeverExpires__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Never Expires</label>
    <type>Checkbox</type>
</CustomField>