force-app/main/default/objects/inspire1__Attribute_Assignment__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Attribute Assignments</relationshipLabel>
    <relationshipName>Attribute_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>