force-app/main/default/objects/inspire1__Attribute_Assignment__c/fields/RecertificationDueDate__c.field-meta.xml
<CustomField>
    <fullName>RecertificationDueDate__c</fullName>
    <label>Recertification Due Date</label>
    <type>Date</type>
</CustomField>