force-app/main/default/objects/inspire1__Attribute_Assignment__c/fields/RenewalDueDate__c.field-meta.xml
<CustomField>
    <fullName>RenewalDueDate__c</fullName>
    <label>Renewal Due Date</label>
    <type>Date</type>
</CustomField>