force-app/main/default/objects/inspire1__Attribute_Assignment__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Active Date</label>
    <type>Date</type>
</CustomField>