force-app/main/default/objects/inspire1__Attribute_Assignment__c/fields/WitnessAuditDate__c.field-meta.xml
<CustomField>
    <fullName>WitnessAuditDate__c</fullName>
    <label>Witness Audit Date</label>
    <type>Date</type>
</CustomField>