force-app/main/default/objects/inspire1__Attribute_Assignment__c/fields/WitnessRequired__c.field-meta.xml
<CustomField>
    <fullName>WitnessRequired__c</fullName>
    <label>Witness Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>